# Vulkraft

./: .gitignore  CMakeLists.txt
src/: VulkraftApplication.cpp  VulkraftApplication.h  globals.cpp  globals.h  main.cpp
src/blocks/: block.cpp  block.hpp
src/camera/: camera.cpp  camera.hpp
src/chunk/: chunk.cpp  chunk.hpp  chunkDrawing.cpp  chunkDrawing.h
src/movement/: AABB.cpp  AABB.hpp  movement.cpp  movement.hpp
src/player/: player.cpp  player.hpp
src/raycast/: trace-ray.cpp  trace-ray.hpp
src/structures/: structure.cpp  structure.hpp
src/utils/: enums.hpp  perlin_noise.hpp  structs.hpp
